working phase shifting function

--- a/metaclk/config
+++ b/metaclk/config
@@ -22,4 +22,6 @@ CONFIG_APP_START
   CONFIG_DRIVER_STM32_TIMER
   CONFIG_MUTEK_CONSOLE
   CONFIG_DRIVER_I2C_BITBANG
+  CONFIG_LIBTERMUI
+  CONFIG_LIBTERMUI_CONSOLE
   
